// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-css-modules build should create valid app 1`] = `
SCRIPTS: Array [
  "/static/typescript/runtime-9729bb82c0a343375b97.js",
  "/static/typescript/702-d6470065f851a41fe905.js",
  "/static/typescript/main-37466ef4f69aacead62f.js",
]
CSS: Array [
  "/static/typescript/main-21ba36bf1c8257f9aa56.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lE4bKpu">
        <div class="_KPLLp3"
             data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>

`;

exports[`typescript-css-modules build should generate the expected files 1`] = `
Object {
  "702-d6470065f851a41fe905.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "702-d6470065f851a41fe905.js.LICENSE.txt": /*
object-assign
(c) Sindre Sorhus
@license MIT
*/

/** @license React v0.20.1
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v16.13.1
 * react-is.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
  "components/BlueBlock/BlueBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "components/RedBlock/RedBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "index.html": SCRIPTS: Array [
    "/static/typescript/runtime-9729bb82c0a343375b97.js",
    "/static/typescript/702-d6470065f851a41fe905.js",
    "/static/typescript/main-37466ef4f69aacead62f.js",
  ]
CSS: Array [
    "/static/typescript/main-21ba36bf1c8257f9aa56.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lE4bKpu">
        <div class="_KPLLp3"
             data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>,
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
export const cssExports: CssExports;
export default cssExports;
",
  "main-21ba36bf1c8257f9aa56.css": .lE4bKpu {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.lE4bKpu ._KPLLp3 {
  font-size: 32px;
}
,
  "main-37466ef4f69aacead62f.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-9729bb82c0a343375b97.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules build-ssr should create valid app 1`] = `
SCRIPTS: Array [
  "http://localhost:4003/runtime-9729bb82c0a343375b97.js",
  "http://localhost:4003/554-7c7b92b521ae83d0b028.js",
  "http://localhost:4003/main-a496e210957760adb8bd.js",
]
CSS: Array [
  "http://localhost:4003/main-21ba36bf1c8257f9aa56.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="lE4bKpu">
        <div class="_KPLLp3"
             data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
            crossorigin="anonymous"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>

`;

exports[`typescript-css-modules build-ssr should generate the expected files 1`] = `
Object {
  "554-7c7b92b521ae83d0b028.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "components/BlueBlock/BlueBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "components/RedBlock/RedBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
export const cssExports: CssExports;
export default cssExports;
",
  "main-21ba36bf1c8257f9aa56.css": .lE4bKpu {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.lE4bKpu ._KPLLp3 {
  font-size: 32px;
}
,
  "main-a496e210957760adb8bd.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-9729bb82c0a343375b97.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules start should start a development server 1`] = `
SCRIPTS: Array [
  "/runtime.js",
  "/vendors-node_modules_pmmmwh_react-refresh-webpack-plugin_client_ErrorOverlayEntry_js-node_mod-a3e43c.js",
  "/vendors-node_modules_babel_runtime_helpers_slicedToArray_js-node_modules_babel_runtime_helper-9b5b55.js",
  "/main.js",
]
CSS: Array [
  "/main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lessStyles__root___lE4bKpu">
        <div class="lessStyles__nested____KPLLp3"
             data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>

`;
